--- a/css/mycss.css
+++ b/css/mycss.css
@@ -21,6 +21,10 @@ a{
 .loader-wrapper{
     width: 100%;
     height: 100%;
+    animation-name: fade;
+    animation-duration: 1s;
+    animation-delay: 3.5s;
+
 }
 
 .container-loader{
@@ -80,16 +84,22 @@ a{
 
 .Logo{
     position: absolute;
-}
-
-.Logo h1{
-    font-size: 40px;
     width: 50px;
     height: 50px;
     border-radius: 50%;
     background-color: rgb(14, 24, 65);
-    padding: 3px 15px;
-    color: white;
+}
+
+.Logo h1{
+    font-size: 40px;
+    margin-left: 18px;
+    margin-top: -5px;
+    text-shadow: 0 0 10px rgb(69, 255, 239);
+    animation-name: glow;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    animation-direction: alternate-reverse;
 }
 
 @keyframes fade{
@@ -98,13 +108,13 @@ a{
 }
 
 @keyframes rotate{
-    0% {transform: rotate(0deg);}
-    100% {transform: rotate(360deg);}
+    0% {transform: rotate(0deg); -webkit-transform: rotate(0deg);}
+    100% {transform: rotate(360deg); -webkit-transform: rotate(360deg);}
 }
 
 @keyframes rotate2{
-    0% {transform: rotate(0deg);}
-    100% {transform: rotate(-360deg);}
+    0% {transform: rotate(0deg); -webkit-transform: rotate(0deg);}
+    100% {transform: rotate(-360deg); -webkit-transform: rotate(-360deg);}
 }
 
 /*header CSS*/
@@ -178,4 +188,77 @@ a{
 @keyframes glow{
     0% {text-shadow: 0 0 0px rgb(69, 255, 239);};
     100% {text-shadow: 0 0 10px rgb(69, 255, 239);};
+}
+
+/*top-wrapper*/
+
+.top-wrapper{
+    width: 100%;
+    height: 100vh;
+}
+
+.container-top{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.content-box{
+    width: 95%;
+    height: 95%;
+    background-color: rgb(9, 15, 39);
+    border-radius: 25px;
+    padding: 50px 150px;
+    border: 1px solid rgb(44, 197, 224);
+    box-shadow: 1px 1px 10px 1px rgb(43, 206, 235);
+    margin: 70px 0px;
+    animation-name: fadebox;
+    animation-duration: 1s;
+    animation-delay: 4s;
+}
+
+.content-box h1{
+    font-size: 28px;
+    padding: 20px 10px;
+    text-align: center;
+    letter-spacing: 2px;
+}
+
+.content-box p{
+    text-align: center;
+    color: white;
+    letter-spacing: 2px;
+    font-size: 18px;
+    line-height: 25px;
+    margin: 0px;
+}
+
+.button-more{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 30px;
+}
+
+.btn{
+    padding: 10px 40px;
+    border: 1px solid rgb(44, 197, 224);
+    border-radius: 10px;
+}
+
+.btn-more{
+    color: rgb(44, 197, 224);
+    font-size: 16px;
+    letter-spacing: 2px;
+}
+
+.btn:hover{
+    box-shadow: 1px 1px 10px 1px rgb(43, 206, 235);
+}
+
+@keyframes fadebox{
+    0% {opacity: 0; transform: translateY(10%)};
+    100% {opacity: 1; transform: translateY(0%)};
 }
